<resources>
    <string name="txt_app_name">LadyBug</string>
    <string name="etx_userName">User</string>
    <string name="etx_email">E-MAIL</string>
    <string name="etx_password">PASSWORD</string>
    <string name="txt_forgotPassword">Forgot Password?</string>
    <string name="btn_login">LOGIN</string>
    <string name="txt_conectWith">------Or conect with------</string>
    <string name="txt_newHere">New here?</string>
    <string name="txt_signUp"><u>Sign Up</u></string>
    <string name="btn_signUp"><a>SIGN UP</a></string>
    <string name="msn_autentication_failed">Authentication failed.</string>
    <string name="facebook_app_id">545650049296430</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="inicio">Start</string>
    <string name="salir">exit</string>
    <string name="text_a1">A1</string>
    <string name="text_a2">A2</string>
    <string name="text_b1">B1</string>
    <string name="infoProgramador">Yesenia Hernandez | Lina Negrete </string>
    <string name="email_empty">this field is required or more greater than 2</string>
    <string name="password_empty">the password is required or more greater than 6 charaters</string>
</resources>
